Fix custom cursor on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,33 +58,46 @@
   }
 }
 
-    html {
-      scroll-behavior: smooth;
-      cursor: none;
-    }
+html {
+  scroll-behavior: smooth;
+  cursor: none;
+}
 
 
-        .custom-cursor {
-          position: fixed;
-          width: 40px;
-          height: 40px;
-          border: 2px solid white;
-          border-radius: 50%;
-          pointer-events: none;
-          mix-blend-mode: difference;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
+.custom-cursor {
+  display: none;
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  border: 2px solid white;
+  border-radius: 50%;
+  pointer-events: none;
+  mix-blend-mode: difference;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
     
-        .inner-dot {
-          position: absolute;
-          width: 8px;
-          height: 8px;
-          background-color: white;
-          border-radius: 50%;
-          mix-blend-mode: difference;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
+.inner-dot {
+  display: none;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: white;
+  border-radius: 50%;
+  mix-blend-mode: difference;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (min-width: 769px) {
+  .custom-cursor
+   {
+    display: block;
+  }
+
+  .inner-dot {
+      display: block;
+    }
+}
